# colabrodo

./: Cargo.toml  README.md  TODO.md
colabrodo_cli/: Cargo.toml
colabrodo_cli/src/: main.rs
colabrodo_client/: Cargo.toml
colabrodo_client/examples/: simple_client.rs
colabrodo_client/src/: client.rs  client_state.rs  components.rs  delegate.rs  lib.rs  mapped_client.rs  methods.rs  server_root_message.rs  table.rs
colabrodo_common/: Cargo.toml
colabrodo_common/src/: client_communication.rs  common.rs  components.rs  lib.rs  network.rs  nooid.rs  recording.rs  server_communication.rs  table.rs  types.rs  value_tools.rs
colabrodo_core/: Cargo.toml
colabrodo_core/examples/: cube.rs  cube_http.rs  pingpong.rs
colabrodo_core/src/: client.rs  common.rs  lib.rs  nooid.rs  server.rs  server_bufferbuilder.rs  server_http.rs  server_messages.rs  server_state.rs
colabrodo_macros/: Cargo.toml
colabrodo_macros/src/: lib.rs
colabrodo_server/: Cargo.toml
colabrodo_server/examples/: cube.rs  cube_http.rs  pingpong.rs  publish_table.rs
colabrodo_server/src/: client_messages.rs  lib.rs  server.rs  server_bufferbuilder.rs  server_http.rs  server_messages.rs  server_state.rs  table.rs  table_system.rs
colabrodo_tools/: Cargo.toml
colabrodo_tools/src/lib/: replay.rs
tests/: Cargo.toml  method_test.rs
