[workspace]
members = [
    "colabrodo_cli",
    "colabrodo_client",
    "colabrodo_common",
    "colabrodo_server",
    "colabrodo_macros",
    "tests",
]

[workspace.dependencies]
thiserror = "1.0"
ciborium = "0.2.0"
ciborium-io = { version = "0.2.0", features = ["alloc"] }
serde = "1.0"
serde_with = "2.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
log = "0.4"
url = {version = "2.2", features=["serde"] }

[workspace.dependencies.uuid]
version = "1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]