[workspace]
members = [
  "colabrodo_tools",
  "colabrodo_client",
  "colabrodo_common",
  "colabrodo_server",
  "colabrodo_macros",
  "tests",
]

resolver = "2"

[workspace.dependencies]
bytemuck = {version = "1.13.0", features = ["derive"]}
ciborium = "0.2.0"
ciborium-io = {version = "0.2.0", features = ["alloc"]}
log = "0.4"
serde = "1.0"
serde_with = "3.6"
thiserror = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "*"
url = {version = "2.2", features = ["serde"]}

[workspace.dependencies.uuid]
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
version = "1.2"
