[package]
name = "colabrodo_client"
version = "0.5.1"
edition = "2021"

[dependencies]
colabrodo_common = { path = "../colabrodo_common" }
thiserror = {workspace = true}
ciborium = {workspace = true}
ciborium-io = {workspace = true}
num-traits = "0.2"
num-derive = "0.3"
serde = {workspace = true}
serde_with ={workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
log = {workspace = true}
url = {workspace = true}
futures-util = "0.3.24"
futures-channel = "0.3.24"
uuid = {workspace = true}

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10.0"
