[package]
edition = "2021"
name = "colabrodo_client"
version = "0.5.2"

[dependencies]
ciborium = {workspace = true}
ciborium-io = {workspace = true}
colabrodo_common = {path = "../colabrodo_common"}
futures-channel = "0.3.24"
futures-util = "0.3.24"
log = {workspace = true}
num-derive = "0.4.2"
num-traits = "0.2"
serde = {workspace = true}
serde_with = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
clap = {version = "4.1", features = ["derive"]}
env_logger = "0.11"
