[package]
name = "colabrodo_common"
version = "0.5.0"
edition = "2021"

[dependencies]
colabrodo_macros = { path = "../colabrodo_macros" }
ciborium = {workspace = true}
ciborium-io = {workspace = true}
serde = {workspace = true}
serde_with = {workspace = true}
log = {workspace = true}
thiserror = {workspace = true}
num-traits = "0.2"
num-derive = "0.3"
url = {workspace = true}
bytemuck = { workspace = true }
local-ip-address = "0.5.1"

