[package]
name = "colabrodo_server"
version = "0.3.0"
edition = "2021"

[dependencies]
colabrodo_macros = { path = "../colabrodo_macros" }
colabrodo_common = { path = "../colabrodo_common" }
thiserror = "1.0"
ciborium = "0.2.0"
ciborium-io = { version = "0.2.0", features = ["alloc"] }
num-traits = "0.2"
num-derive = "0.3"
serde = "1.0.152"
serde_with = "2.2.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "*"
hostname = "0.3.1"
log = "0.4"
futures-util = "0.3.24"
futures-channel = "0.3.24"
indexmap = "1.9"
tokio-util = "0.7"
bytemuck = { version="1.13.0", features = ["derive"]}

[dependencies.uuid]
version = "1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[dev-dependencies]
env_logger = "0.10.0"
