[package]
name = "colabrodo_server"
version = "0.4.0"
edition = "2021"

[dependencies]
colabrodo_macros = { path = "../colabrodo_macros" }
colabrodo_common = { path = "../colabrodo_common" }
thiserror = {workspace = true}
ciborium = {workspace = true}
ciborium-io = {workspace = true}
num-traits = "0.2"
num-derive = "0.3"
serde = {workspace = true}
serde_with = {workspace = true}
tokio = {workspace = true}
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = {workspace = true}
hostname = "0.3.1"
log = {workspace = true}
futures-util = "0.3.24"
futures-channel = "0.3.24"
indexmap = "1.9"
tokio-util = "0.7"
bytemuck = { version="1.13.0", features = ["derive"]}
closure = "0.3"
uuid = {workspace = true}

[dev-dependencies]
env_logger = "0.10.0"
