[package]
edition = "2021"
name = "colabrodo_server"
version = "0.5.2"

[dependencies]
bytemuck = {workspace = true}
ciborium = {workspace = true}
ciborium-io = {workspace = true}
closure = "0.3"
colabrodo_common = {path = "../colabrodo_common"}
colabrodo_macros = {path = "../colabrodo_macros"}
futures-channel = "0.3.24"
futures-util = "0.3.24"
hyper = {version = "0.14", features = ["full"]}
indexmap = "2.2.5"
local-ip-address = "0.6"
log = {workspace = true}
num-derive = "0.4.2"
num-traits = "0.2"
serde = {workspace = true}
serde_with = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
tokio-util = "0.7"
url = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
env_logger = "0.11"
