[package]
name = "colabrodo_tools"
version = "0.5.0"
edition = "2021"

[lib]
name = "replay"
path = "src/lib/replay.rs"

[dependencies]
colabrodo_client = { path = "../colabrodo_client" }
colabrodo_server = { path = "../colabrodo_server" }
colabrodo_common = { path = "../colabrodo_common" }
clap = { version = "4.0", features = ["derive"] }
log = {workspace = true}
env_logger = "0.10.0"
requestty = "0.5.0"
futures-util = "0.3.24"
futures-channel = "0.3.24"
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
url = {workspace = true}
serde_json = "1.0"
uuid = {workspace = true}
bytemuck = { workspace = true }
chrono = "0.4.24"
anyhow = "1.0.70"
