[package]
edition = "2021"
name = "colabrodo_tools"
version = "0.5.1"

[lib]
name = "replay"
path = "src/lib/replay.rs"

[dependencies]
anyhow = "1.0.70"
bytemuck = {workspace = true}
chrono = "0.4.24"
clap = {version = "4.0", features = ["derive"]}
colabrodo_client = {path = "../colabrodo_client"}
colabrodo_common = {path = "../colabrodo_common"}
colabrodo_server = {path = "../colabrodo_server"}
env_logger = "0.11"
futures-channel = "0.3.24"
futures-util = "0.3.24"
log = {workspace = true}
requestty = "0.5.0"
serde_json = "1.0"
tokio = {workspace = true}
tokio-tungstenite = {workspace = true}
url = {workspace = true}
uuid = {workspace = true}
