[package]
edition = "2021"
name = "tests"
publish = false
version = "0.2.0"

[dev-dependencies]
colabrodo_client = {path = "../colabrodo_client"}
colabrodo_common = {path = "../colabrodo_common"}
colabrodo_server = {path = "../colabrodo_server"}
env_logger = "0.11.3"
log = "0.4"

[[test]]
name = "method_test"
path = "method_test.rs"
